--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "dotenv": "^10.0.0",
+    "inversify": "^5.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-search-field": "^2.0.1",
+    "reflect-metadata": "^0.1.13",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
