--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "inversify": "^5.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "6",
     "react-scripts": "4.0.3",
     "react-search-field": "^2.0.1",
     "reflect-metadata": "^0.1.13",
