--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "axios": "^0.24.0",
     "dotenv": "^10.0.0",
     "inversify": "^5.1.1",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.0.5",
     "react-router-dom": "6",
     "react-scripts": "4.0.3",
     "react-search-field": "^2.0.1",
